# suhana

./: .coveragerc  .editorconfig  .gitignore  Dockerfile  Install.md  README.md  api_server.py  bump_version.py  codecov.yml  ingest.py  ingest_project.py  main.py  profile.json  profile.template.json  pyproject.toml  requirements-ci.txt  requirements.txt  settings.template.json  setup.bat  setup.sh  test.bat  test.sh
.github/workflows/: backend-tests.yml  frontend-tests.yml  test-coverage.yml
actions/: note.py  tell_date.py  tell_time.py  update_profile.py  web_search.py
docs/: architecture.md
engine/: action_store.py  actions.py  agent.py  agent_core.py  api_key_store.py  api_server.py  codegen_agent.py  conversation_manager.py  conversation_store.py  crypto_query.py  di.py  engine_config.py  error_handling.py  history.py  intent.py  intents.yaml  interfaces.py  logging_config.py  memory_store.py  net.py  profile.py  profile_migrator.py  project_detector.py  settings_manager.py  tool_store.py  user_manager.py  utils.py  voice.py
engine/agent/: coder.py  commons.py  context.py  planner.py
engine/backends/: claude.py  error_handling.py  gemini.py  ollama.py  openai.py
engine/coding_agent/: __init__.py  coder.py  commons.py  models.py  planner.py
engine/database/: __init__.py  base.py  mongodb.py  postgres.py  sqlite.py
engine/security/: __init__.py  access_control.py  database_access.py  encryption.py
knowledge/: about.md  roadmap.md
tauri-ui/: eslint.config.js  index.html  jest.setup.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri-ui/public/: splashscreen.html
tauri-ui/src/: main.test.tsx  main.tsx  style.css
tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ui/src-tauri/capabilities/: default.json
tauri-ui/src-tauri/icons/: icon.icns
tauri-ui/src-tauri/src/: main.rs
tauri-ui/src/__tests__/: CodeBlock.test.tsx
tauri-ui/src/components/: App.test.tsx  App.tsx  AuthModal.tsx  ChatMessages.test.tsx  ChatMessages.tsx  ChatToolbar.test.tsx  ChatToolbar.tsx  CodeBlock.css  CodeBlock.test.tsx  CodeBlock.tsx  FolderSelector.test.tsx  FolderSelector.tsx  Login.test.tsx  Login.tsx  PrivacyPage.tsx  ProjectMetadata.test.tsx  ProjectMetadata.tsx  Register.test.tsx  Register.tsx  Settings.test.tsx  Settings.tsx  Sidebar.test.tsx  Sidebar.tsx  WelcomePage.test.tsx  WelcomePage.tsx
tauri-ui/src/context/: ChatContext.test.tsx  ChatContext.tsx  ConversationContext.tsx
tauri-ui/src/hooks/: useFastAPI.ts
tauri-ui/src/utils/: client-stream.test.ts  client-stream.ts  highlightCode.test.ts  highlightCode.ts  highlighterConfig.test.ts  highlighterConfig.ts
tests/: README.md  test_add_note.py  test_agent.py  test_agent_core.py  test_api_key_store.py  test_calculator.py  test_di.py  test_error_handling.py  test_history.py  test_logging_config.py  test_memory_store.py  test_profile_meta.py  test_sqlite_adapter.py  test_tts.py  test_utils.py  test_voice.py  test_weather.py  test_web_search.py
tests/integration/: test_agent.py  test_agent_core.py  test_memory_store.py  test_tts.py  test_utils.py  test_voice.py  test_web_search.py
tests/unit/: conftest.py  test_access_control.py  test_add_note.py  test_agent.py  test_agent_core.py  test_api_key_store.py  test_api_server.py  test_backends_claude.py  test_backends_gemini.py  test_backends_ollama.py  test_backends_openai.py  test_conversation_store.py  test_crypto_query.py  test_date_time_tools.py  test_db_adapters_no_driver.py  test_di.py  test_encryption.py  test_engine_config.py  test_error_handling.py  test_history_summaries.py  test_interfaces.py  test_list_notes.py  test_logging_config.py  test_memory_store.py  test_mongodb.py  test_net.py  test_postgres.py  test_profile_meta.py  test_project_detector.py  test_settings_manager.py  test_sqlite_adapter.py  test_tool_store.py  test_update_profile.py  test_user_manager.py  test_utils.py  test_voice.py  test_web_search.py
tools/: add_note.py  calculator.py  get_date.py  get_time.py  list_notes.py  update_profile.py  weather.py  web_search.py
vectorstore/: index.faiss  index.pkl
