[build-system]
requires = [ "setuptools>=80.9",]
build-backend = "setuptools.build_meta"

[project]
name = "suhana"
version = "0.1.1"
description = "A self-hosted AI companion: a modular chat agent with a personality, local knowledge base, and the ability to run commands"
readme = "README.md"
requires-python = ">=3.13"
keywords = [ "ai", "chat", "agent", "llm", "ollama", "openai",]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.13",]
dependencies = [
    "langchain~=1.0.2",
    "langchain_core~=1.0.0",
    "langchain_community~=0.4",
    "langchain-huggingface~=1.0.0",
    "langchain-text-splitters~=1.0.0",
    "sentence-transformers",
    "faiss-cpu",

    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "anthropic~=0.71.0",
    "hf_xet",

    "fastapi~=0.120.0",
    "uvicorn~=0.38.0",
    "python-multipart",

    "PyYAML",
    "dotenv~=0.9.9",
    "python-dotenv~=1.1.0",
    "requests~=2.32.3",
    "tiktoken~=0.12.0",
    "pathspec~=0.12.1",

    "numpy~=2.3.4",
    "scipy",
    "sounddevice~=0.5.1",
    "soundfile~=0.13.1",
    "openai-whisper",
    "coqui-tts",

    "beautifulsoup4~=4.14.2",
    "bs4~=0.0.2",

    "cryptography~=46.0.3",

    "pymongo~=4.15.3",
    "bson~=0.5.10",
    "psycopg2-binary~=2.9.10",

    "pytest~=8.4.2",
    "pytest-cov",

    "protobuf~=5.29.5",
    "toml~=0.10.2",
    "pydantic~=2.12.3"
]
[[project.authors]]
name = "Attila Reterics"
email = "attila@reterics.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [ "pytest~=8.4.1", "pytest-cov", "black",]

[project.urls]
Homepage = "https://github.com/Reterics/suhana"
"Bug Tracker" = "https://github.com/Reterics/suhana/issues"

[project.scripts]
suhana = "main:main"
suhana-api = "api_server:main"
suhana-ingest = "ingest:main"
suhana-ingest-project = "ingest_project:main"

[tool.setuptools]
packages = [ "engine", "tools",]

[tool.black]
line-length = 88
target-version = [ "py313",]
skip-string-normalization = true
indent-width = 4

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = "test_*.py"
python_functions = "test_*"
